--- a/FiniteDifferenceMethod.csproj
+++ b/FiniteDifferenceMethod.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="TimeGridImage.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="ConverterFactory.cs" />
     <Compile Include="Form1.cs">
